# OpenManus

./: .gitignore  README.md  README_zh.md  main.py  pyproject.toml  run_flow.py
app/: config.py
config/: config.example.toml  config.toml
docs/: architecture.md
