[tool.poetry]
name = "openmanus"
version = "0.1.0"
description = "OpenManus - An open-source implementation of Manus agent"
authors = ["OpenManus Team <mannaandpoem@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mannaandpoem/OpenManus"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "~2.10.4"
openai = "~1.58.1"
tenacity = "~9.0.0"
pyyaml = "~6.0.2"
loguru = "~0.7.3"
numpy = "*"
datasets = "~3.2.0"
html2text = "~2024.2.26"
gymnasium = "~1.0.0"
pillow = "~10.4.0"
browsergym = "~0.13.3"
uvicorn = "~0.34.0"
unidiff = "~0.7.5"
browser-use = "~0.1.40"
googlesearch-python = "~1.3.0"
aiofiles = "~24.1.0"
pydantic_core = "~2.27.2"
colorama = "~0.4.6"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
openmanus = "main:main"
flow = "run_flow:run_flow"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88 